# lwt

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: config.py  constants.py  main.py  routes.py  schema.py  servises.py
app/api/: auth.py  content.py  notebook.py  routes.py  users.py
app/certs/: jwt_private.perm  jwt_publc.perm
app/db/: connection.py  models.py
app/db/migrations/: env.py
app/db/migrations/versions/: 51f5396f04be_add_author_to_content.py  a65adceb0867_create_table_notebook.py  d282197de3e0_add_new_columns_to_content.py  df918e4667ea_create_table_user.py  e1c9a10eaefd_create_table_content.py  f774bd598303_create_table_notebook.py
app/di/: auth.py  datebase.py  filters.py  services.py
app/services/: __init__.py  auth_services.py  content_service.py  notebook_service.py  user_service.py
tests/: test_main.py
