[tool.poetry]
name = "lwt"
version = "0.1.0"
description = ""
authors = ["Ogneva.A.C <ognevaalena22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
