[tool.poetry]
name = "lwt"
version = "0.1.0"
description = ""
authors = ["Ogneva.A.C <ognevaalena22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
jwt = "^1.3.1"
PyJWT = "^2.8.0"
bcrypt = "^4.1.2"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
pydantic-settings = "^2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
